[ FIX ] Gallery and text spacing

--- a/style/base.css
+++ b/style/base.css
@@ -30,6 +30,10 @@ body {
     gap: var(--small-spacing);
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: var(--small-spacing);
+}
+
 .singlepageheader, .multipageheader {
     width: 100%;   
 }
@@ -110,14 +114,14 @@ a:hover {
     color: var(--accent-hover);
 }
 
-section.gallery {
+.gallery {
     position: relative;
     display: grid;
     grid-template-columns: auto auto;
     gap: var(--small-spacing);
 }
 
-section.gallery > figure {
+.gallery > figure {
     position: relative;
     border-radius: var(--border-radius);
     overflow: hidden;
@@ -125,15 +129,15 @@ section.gallery > figure {
     transition: top 0.25s ease;
 }
 
-section.gallery > figure.link{
+.gallery > figure.link{
     cursor: pointer;
 }
 
-section.gallery > figure.link:hover {
+.gallery > figure.link:hover {
     top: calc(var(--small-spacing) / 2 * -1);
 }
 
-section.gallery > figure > figcaption  {
+.gallery > figure > figcaption  {
     background-color: var(--background);
     position: absolute;
     bottom: 0;
